DEVX-89 add tests to increase coverage